# CreatureCraze

./: .gitignore  README.md  animationtester.js  bridge_tester.STL  city.avif  heart.avif  hero.avif  image_modifier.m  index.html  package-lock.json  package.json  script.js  server.js  stl_reader.asv  stl_reader.m  style.css
arcade/: index.html  package.json  script.js  server.cjs
arcade/json/: shield_pixels.json  stereo.json
arcade/modules/: utils.js
arcade/modules/graphics/: object.ts  scene.ts
arcade/modules/minigames/: MotorcycleRacer.js  Pacman.js  Pong.js  SpaceInvaders.js  (+1 more)
concertmaster/: index.html  island.cpp  music_utils.h  song.cpp  song_props.cpp  test.m  twinkle (1).mid
concertmaster/cpp/: build.sh
concertmaster/test/: yay.mid
cpp-backends/: bindings.cpp
cpp-backends/concertmaster/: CMakeLists.txt  island.cpp  island.h  music_utils.cpp  song.cpp  song.h  song_props.h
cpp-backends/graphics/: MaterialProperties.json  object.cpp  object.h  scene.cpp  scene.h
cpp-backends/math-utils/: matrix.h  vector.h
cpp-backends/motorcycle-racer/: motorcycleGears.cpp  motorcycle_dynamics.cpp  motorcycle_dynamics.h
dev-scripts/: image_modifier.m  midi_tester.m
metronome/: index.html  script.js
rocket_racer/: index.html  script.js
services/: cpp_utils.js  cpp_utils.wasm
services/arcade/: index.html  package-lock.json  script.js
services/concertmaster/: index.html  script.js
services/metronome/: clipped_beep.m4a  index.html  script.js
services/rocket_racer/: index.html  script.js
user_data/: animal.js  database.js  littleBuddy.js  user.js
(+38 files in other folders)
